# pyTCR

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-pypi.md  README.md  cliff.toml  environment.yml  funcs.py  main.ipynb  main2.ipynb  package.json  params.py  pyproject.toml  setup.py
.binder/: environment.yml
.github/workflows/: CI.yml  JOSS_paper_pdf.yml
data/: C_Drag500.mat  bathymetry_high.mat  multi_coord_data.nc  sorted.mat  windprofiles_data.mat
data/shapefiles/: CONUS.dbf  Texas_bound.dbf  Texas_bound.shp  setx_bound.dbf
docs/: _config.yml  _toc.yml  conf.py  datatypes.md  installation.md  intro.md  math.md  paper.md  references.bib
docs/_build/.doctrees/: environment.pickle  installation.doctree  intro.doctree  math.doctree
docs/_build/.doctrees/api/: index.doctree  modules.doctree  pyTCR.doctree
docs/_build/.doctrees/examples/: ex0_download_tracks_from_cmip6.doctree  ex1_tropical_cyclone_tracks.doctree  ex2_rainfall_generation.doctree  ex3_wind_speed_generation.doctree  ex4_rainfall_polygons_generation.doctree  ex5_multiple_rainfall_event_polygon.doctree  examples.doctree
docs/_build/html/: .buildinfo  genindex.html  installation.html  intro.html  math.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/api/: index.html  modules.html  pyTCR.html
docs/_static/: custom.css
docs/api/: modules.rst  pyTCR.rst
docs/examples/: ex0_download_tracks_from_cmip6.ipynb  ex1_tropical_cyclone_tracks.ipynb  ex2_rainfall_generation.ipynb  ex3_wind_speed_generation.ipynb  ex4_rainfall_polygons_generation.ipynb  ex5_multiple_rainfall_event_polygon.ipynb  examples.md  symlink.sh
joss/: Makefile  paper.bib  paper.md
miscellaneous/: wrtfastn.f
notebooks/: ex0_download_tracks_from_cmip6.ipynb  ex1_tropical_cyclone_tracks.ipynb  ex2_rainfall_generation.ipynb  ex3_wind_speed_generation.ipynb  ex4_rainfall_polygons_generation.ipynb  ex5_multiple_rainfall_event_polygon.ipynb
source/: conf.py  index.rst
src/: convert.py  iodata.py  plots.py  rainfall.py  terrain_boundary.py  wind.py
tcr/: __init__.py  constants.py  convert.py  datadir.py  iodata.py  parallel.py  parameters.py  params.py  physics.py  plots.py  rainfall.py  terrain_boundary.py  wind.py
tcr/data/observations/: IBTrACS.NA.v04r00.nc
tcr/data/shapefiles/: Texas_bound.shx  setx_bound.shp  setx_bound.shx
tests/: test_convert.py  test_load.py  test_physics.py  test_rainfall.py  test_wind.py
(+29 files in other folders)
