[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyTCR"
version = "1.2.1rc1"
description = "Python-based Tropical Cyclone Rainfall"
authors = [
    {name = "Phong Le", email = "levuvietphong@gmail.com"}
]
dependencies = [
    "numpy",
    "matplotlib",
    "colorcet",
    "scipy",
    "cartopy",
    "shapely",
    "xarray",
    "netcdf4",
    "pyproj",
    "jupyter",
    "geopandas",
    "requests",
    "bs4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README-pypi.md"

[tool.hatch.build.targets.wheel]
only-include = ["tcr", "data"]

[tool.hatch.build.targets.wheel.sources]
"tcr" = "tcr"
"data" = "tcr/data"