[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyTCR"
dynamic = ["version"]
description = "A model for tropical cyclone rainfall"
authors = [
    {name = "Phong Le", email = "levuvietphong@gmail.com"}
]
readme = "README-pypi.md"
requires-python = ">=3.11"

dependencies = [
    "cartopy",
    "colorcet",
    "geopandas",
    "jupyter",
    "matplotlib",
    "netcdf4",
    "numpy",
    "pyproj",
    "requests",
    "scipy",
    "shapely",
    "xarray",
    "beautifulsoup4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.hatch.build.targets.wheel]
only-include = ["tcr", "data"]

[tool.hatch.build.targets.wheel.sources]
"tcr" = "tcr"
"data" = "tcr/data"

[tool.hatch.version]
path = "tcr/__init__.py"  # This tells Hatch where to find the version
